--- a/phoenix.html
+++ b/phoenix.html
@@ -14,7 +14,7 @@
 
 
 
-  <title>SickSearch Home Page</title>
+  <title>Phoenix, AZ SickMap &reg;</title>
 </head>
 
 <body>
@@ -70,40 +70,10 @@
   </div>
 
   <div class="container">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block img-fluid" style="width: 30%;" src="assets/img/heart.jpg" max-width=100% height=auto alt="First slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h1>Find out who is sick in your city</h1>
-            <h3>Obtain real-time data on contagious people around you</h3>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="assets/img/doctor.jpg" alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h1>Avoid unnecessary trips to the doctor</h1>
-            <h3>Doctors can accidentally kill you, so it is good to avoid them</h3>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="assets/img/steth.jpg" alt="Third slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h1>Sickness often leads to death</h1>
-            <h3>Our application will help you live longer</h3>
-          </div>
-        </div>
+      <div class="jumbotron">
+        <h1 class="display-4">Phoenix, AZ SickMap &reg;</h1>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
-  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
