--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
 
 
-  <title>Los Angeles, CA SickMap &reg;</title>
+  <title>Chicago, IL SickMap &reg;</title>
 </head>
 
 <body>
@@ -70,12 +70,10 @@
       </div>
 
   <div class="container">
-      <div class="jumbotron">
-        <h1 class="display-4">Los Angeles, CA SickMap &reg;</h1>
-      </div>
+    <div class="jumbotron">
+      <h1 class="display-4">About Us</h1>
     </div>
-
-    <div id="map"></div>
+  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
