--- a/phoenix.html
+++ b/phoenix.html
@@ -7,14 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="assets/css/styles.css">
+
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
 
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin="" />
 
+  <link rel="stylesheet" href="assets/css/styles.css">
 
   <title>Phoenix, AZ SickMap &reg;</title>
+
 </head>
 
 <body>
@@ -33,30 +37,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="index.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">
-              SickMaps &reg;
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="newyork.html">New York City, NY</a>
-              <a class="dropdown-item" href="losangeles.html">Los Angeles, CA</a>
-              <a class="dropdown-item" href="chicago.html">Chicago, IL</a>
-              <a class="dropdown-item" href="houston.html">Houston, TX</a>
-              <a class="dropdown-item" href="philadelphia.html">Philadelphia, PA</a>
-              <a class="dropdown-item" href="phoenix.html">Phoenix, AZ</a>
-              <a class="dropdown-item" href="sanantonio.html">San Antonio, TX</a>
-              <a class="dropdown-item" href="sandiego.html">San Diego, CA</a>
-              <a class="dropdown-item" href="dallas.html">Dallas, TX</a>
-              <a class="dropdown-item" href="sanjose.html">San Jose, CA</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="phoenix-arizona">Phoenix, AZ</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact Us</a>
           </li>
@@ -70,19 +60,27 @@
   </div>
 
   <div class="container">
-      <div class="jumbotron">
-        <h1 class="display-4">Phoenix, AZ SickMap &reg;</h1>
-      </div>
+    <div class="jumbotron">
+      <h1 class="display-4">Phoenix, AZ SickMap &reg;</h1>
     </div>
+  </div>
+  <div class="container">
+    <div id="mapid"></div>
+  </div>
+  
+
+  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+    crossorigin=""></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
