updated circle generation

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="dropdown-item" href="phoenix.html" id="phoenix-arizona">Phoenix, AZ</a>
+            <a class="nav-link" href="phoenix.html" id="phoenix-arizona">Phoenix, AZ</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact Us</a>
