--- a/phoenix.html
+++ b/phoenix.html
@@ -56,19 +56,19 @@
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
-
+    </nav>
+  </div>
         
   <div class="container">
     <div class="jumbotron">
       <h1 class="display-4">Phoenix, AZ SickMap &reg;</h1>
     </div>
   </div>
+
   <div class="container">
-    <div id="mapid"></div>
+    <div id="mapDiv"></div>
   </div>
   
-
-  </div>
 
 
   <!-- Optional JavaScript -->
